--- a/CoursesWebsite/Site.css
+++ b/CoursesWebsite/Site.css
@@ -1,18 +1,69 @@
-﻿body {
-    background-color:gainsboro;
+﻿@font-face{
+    font-family: MyriadPro;
+    src: url(fonts/MyriadPro-Regular.otf);
 }
 
-.column{
+@font-face{
+    font-family: ModerneSans;
+    src: url(fonts/Moderne-Sans.ttf);
+}
+
+body {
+    /*background-color:gainsboro;
+    background-color: #326ec2;*/
+    /*background-color: #36a432;*/
+    background-color: #e8c938;
+}
+
+.form{
+    display: inline;
+    width: 15%;
+    font-size: 150%;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 2px solid;
+    color: rgba(0, 0, 0, .3);
+}
+    .form:focus{
+        color: black;
+    }
+
+.formText{
     display: inline-block;
-    position: relative;
-    width: 14.10%;
-    outline: solid;
+    width: 15%;
+    font-family: ModerneSans;
+    font-size: 100%;
+}
+
+.skill{
+    margin-left: 5%;
+}
+
+#formsDiv{
     text-align: center;
-    outline-color: black;
-    background-color: skyblue;
+    margin-top: 10%;
+}
+
+#main{
+    background-color: white;
+    width: 75%;
+    height: 99vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -.5%;
+    box-shadow: 0 12px 30px 0 rgba(0, 0, 0, 0.3), 0 12px 30px 0 rgba(0, 0, 0, 0.3);
+}
+
+#title{
+    text-align: center;
+    font-size: 500%;
+    border-bottom: 2px solid;
+    font-family: MyriadPro;
 }
 
 #updateDatabse{
     display: inline-block;
     clear: both;
 }
+
+
