added 2 new fonts, and finally figured out how to grab top 5 most popular jobs in descending order while combining counts of duplicate jobs

--- a/CoursesWebsite/Site.css
+++ b/CoursesWebsite/Site.css
@@ -8,28 +8,69 @@
     src: url(fonts/Moderne-Sans.ttf);
 }
 
+@font-face{
+    font-family: Simplifica;
+    src: url(fonts/Simplifica.ttf);
+}
+
+@font-face{
+    font-family: Code-Light;
+    src: url(fonts/Code-Light.otf);
+}
+
+@font-face{
+    font-family: Code-Bold;
+    src: url(fonts/Code-Bold.otf);
+}
+
 body {
     /*background-color:gainsboro;
     background-color: #326ec2;*/
     /*background-color: #36a432;*/
     background-color: #e8c938;
+    height: 100%;
+    overflow-y: hidden;
+}
+
+html{
+    height: 100%;
 }
 
 .form{
     display: inline;
-    width: 15%;
-    font-size: 150%;
-    background-color: transparent;
-    border: 2px solid;
-    border-radius: 0px;
-    padding: .2% 0% .2% 1%;
+    width: 17%;
+    font-size: 200%;
+    background-color: rgb(170, 170, 170);
+    border: 2px solid rgb(170, 170, 170);
+    border-radius: 3px;
+    padding: .2% 0% .2% .5%;
     outline: none;
     /*border-bottom: 2px solid;*/
-    color: rgba(0, 0, 0, .3);
+    color: rgba(255, 255, 255, 0.5);
+
+    transition: 0.5s linear;
 }
     .form:focus{
-        color: black;
-        border: 2px solid rgb(209, 17, 17);
+        color: rgba(255, 255, 255, 1);
+        border: 2px solid black;
+        border-radius: 5px;
+
+        transition: 0.5s linear;
+    }
+
+    ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+        color: rgba(255, 255, 255, 0.5);
+    }
+    :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+       color: rgba(255, 255, 255, 0.5);
+       opacity: 1;
+    }
+    ::-moz-placeholder { /* Mozilla Firefox 19+ */
+       color: rgba(255, 255, 255, 0.5);
+       opacity: 1;
+    }
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+       color: rgba(255, 255, 255, 0.5);
     }
 
 .formText{
@@ -44,37 +85,66 @@ body {
     margin-left: .5%;
 }
 
+.title{
+    display: inline-block;
+    text-align: center;
+    font-size: 1000%;
+    margin-top: 4%;
+    color: white;
+    font-family: Code-Light;
+}
+
+#exploreTitle{
+    margin-left: 1%;
+    font-family: Code-Bold;
+}
+
 #formsDiv{
     text-align: center;
-    margin-top: 20%;
+    margin-top: 10%;
+}
+
+#jobTitle{
+    font-family: Code-Light;
 }
 
 #main{
-    background-color: white;
+    /*background-color: rgb(2, 0, 16);*/
+    background-image: url("noisy-texture-100x100-o6-d48-c-020010-t0.png");
     width: 75%;
-    height: 99vh;
+    height: 101%;
     margin-left: auto;
     margin-right: auto;
     margin-top: -.5%;
-    box-shadow: 0 12px 30px 0 rgba(0, 0, 0, 0.3), 0 12px 30px 0 rgba(0, 0, 0, 0.3);
-}
-
-#title{
-    text-align: center;
-    font-size: 500%;
-    border-bottom: 2px solid;
-    font-family: MyriadPro;
+    box-shadow: -60px 0px 200px -90px rgba(0, 0, 0, .5), 60px 0px 200px -90px rgba(0, 0, 0, .5);
 }
 
 #updateDatabase{
     display: inline-block;
     margin-top: .9%;
-    clear: both;
-    background-color: rgb(28, 184, 65);
+    background-color: rgb(42, 177, 74);
     border: 2px solid rgba(28, 184, 65, .1);
     outline: none;
-    border-radius: 0px;
-    padding: .8% 12.99% .8% 12.99%; 
+    border-radius: 4px;
+    color: white;
+    width: 36.3%;
+    font-size: 150%;
+    padding: .4% 0% .4% 0%;
+    font-family: MyriadPro;
+    position: relative;
+
+    transition: 0.5s linear;
 }
 
+    #updateDatabase:hover{
+        background-color: rgb(0, 195, 46);
+        cursor: pointer;
+        padding-right: .5%;
 
+        transition: 0.5s linear;        
+    }
+
+    #updateDatabase:hover::after{
+        /*content: " ➤";*/
+        content: "  →";
+    }
