--- a/CoursesWebsite/Site.css
+++ b/CoursesWebsite/Site.css
@@ -23,6 +23,16 @@
     src: url(fonts/Code-Bold.otf);
 }
 
+@font-face{
+    font-family: Cloud-Light;
+    src: url(fonts/Placeholders/Cloud-Light.otf);
+}
+
+@font-face{
+    font-family: Placeholder;
+    src: url(fonts/Placeholders/Cloud-Light.otf);
+}
+
 body {
     /*background-color:gainsboro;
     background-color: #326ec2;*/
@@ -32,9 +42,46 @@ body {
     overflow-y: hidden;
 }
 
+caption{
+    color: rgb(125, 25, 25);
+    background-color: inherit;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    border-top: 1px solid white;
+}
+
 html{
     height: 100%;
 }
+
+table{
+    /*background-color: rgba(0, 38, 255, .1);*/
+    background-color: rgba(255, 255, 255, .05);
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+    width: 40%; 
+    margin-top: 3%;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    padding-right: 1%;
+    padding-left: 1%;
+    font-size: 160%;
+    font-family: Cloud-Light, sans-serif;
+}
+
+td{
+    padding-bottom: -100px;
+}
+    td:nth-child(1){
+        text-align: left;
+    }
+
+    td:nth-child(2){
+        text-align: right;
+    }
 
 .form{
     display: inline;
@@ -45,7 +92,6 @@ html{
     border-radius: 3px;
     padding: .2% 0% .2% .5%;
     outline: none;
-    /*border-bottom: 2px solid;*/
     color: rgba(255, 255, 255, 0.5);
 
     transition: 0.5s linear;
@@ -76,7 +122,7 @@ html{
 .formText{
     display: inline-block;
     width: 15%;
-    font-family: ModerneSans;
+    font-family: MyriadPro;
     font-size: 100%;
     visibility: hidden;
 }
@@ -99,9 +145,15 @@ html{
     font-family: Code-Bold;
 }
 
-#formsDiv{
+#formsWrapper{
     text-align: center;
     margin-top: 10%;
+}
+
+#jobStatsTable{
+    color: white;
+    margin-left: 0%;
+    display: inline-table;
 }
 
 #jobTitle{
@@ -111,12 +163,29 @@ html{
 #main{
     /*background-color: rgb(2, 0, 16);*/
     background-image: url("images/noisyTexture.png");
+    z-index: -1;
     width: 75%;
     height: 101%;
     margin-left: auto;
     margin-right: auto;
     margin-top: -.5%;
-    box-shadow: -60px 0px 200px -90px rgba(0, 0, 0, .5), 60px 0px 200px -90px rgba(0, 0, 0, .5);
+    box-shadow: -60px 0px 200px -30px rgba(0, 0, 0, .5), 60px 0px 200px -30px rgba(0, 0, 0, .5);
+}
+
+#skillStatsTable{
+    color: white;
+    margin-left: 10%;
+    display: inline-table;
+}
+
+#tableWrapper{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10%;
+    height: 30%;
+    background-color: rgba(255, 255, 255, .1);
+    border-radius: 3px;
+    text-align: center;
 }
 
 #updateDatabase{
