--- a/CoursesWebsite/Site.css
+++ b/CoursesWebsite/Site.css
@@ -25,7 +25,7 @@
 
 @font-face{
     font-family: Cloud-Light;
-    src: url(fonts/Placeholders/Cloud-Light.otf);
+    src: url(fonts/Cloud-Light.otf);
 }
 
 @font-face{
