--- a/CoursesWebsite/Site.css
+++ b/CoursesWebsite/Site.css
@@ -107,12 +107,35 @@ td{
     text-align: left;
 }
 
-.contentCard{
+.column{
     display: inline;
     width: 31%;
-    height: 33%;
+}
+    #leftColumn{
+        float: left;
+        width: 33%;
+    }
+
+    #middleColumn{
+        /*position: absolute;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;*/
+        float: left;
+        margin-left: 1.3%;
+        width: 33%;
+    }
+
+    #rightColumn{
+        float: right;
+    }
+
+.contentCard{
+    display: inline;
     padding: 1%;
     padding-bottom: 0.5%;
+    padding: 2% 2% 0% 2%;
     float: left;
     font-family: MyriadPro;
     font-size: 100%;
@@ -135,14 +158,15 @@ td{
     }
 
 .contentCard > #formsWrapper > input{
-    width: 100%;
-    margin-left: -1%;
+    width: 96.5%;
+    margin-left: .9%;
     margin-bottom: 2%;
     font-size: 150%;
 }
     .contentCard > #formsWrapper > button{
-        width: 101.5%;
-        margin-left: -1%;
+        width: 97.8%;
+        margin-left: 1%;
+        margin-bottom: 2%;
     }
 
     .contentCard > #formsWrapper{
@@ -296,6 +320,14 @@ td{
     font-family: Code-Light;
 }
 
+#associatedTags{
+    width: 96%;
+}
+
+#averageSalary{
+    display: block;
+}
+
 #exploreTitle{
     display: inline;
     margin-left: 1%;
@@ -354,7 +386,6 @@ td{
 
 #main{
     width: 65%;
-    padding-left: .6%;
 }
 
 #menuWrapper{
