--- a/CoursesWebsite/Site.css
+++ b/CoursesWebsite/Site.css
@@ -136,6 +136,7 @@ td{
     padding: 1%;
     padding-bottom: 0.5%;
     padding: 2% 2% 0% 2%;
+    margin-bottom: 3%;
     float: left;
     font-family: MyriadPro;
     font-size: 100%;
@@ -158,14 +159,14 @@ td{
     }
 
 .contentCard > #formsWrapper > input{
-    width: 96.5%;
-    margin-left: .9%;
+    width: 97.7%;
+    margin-left: .2%;
     margin-bottom: 2%;
     font-size: 150%;
 }
     .contentCard > #formsWrapper > button{
-        width: 97.8%;
-        margin-left: 1%;
+        width: 99.2%;
+        margin-left: 0.3%;
         margin-bottom: 2%;
     }
 
