--- a/CoursesWebsite/Site.css
+++ b/CoursesWebsite/Site.css
@@ -55,92 +55,77 @@ body {
     /*background-color: #326ec2;*/
     /*background-color: #36a432;*/
     background-color: #f6d4c6;
-    height: 100%;
+    height: 1080px;
     /*overflow-y: hidden;*/
 }
 
 caption{
     color: rgb(125, 25, 25);
-    background-color: inherit;
     /*border-bottom: 2px solid rgb(125, 25, 25);*/
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
-    width: 100%;
 }
 
 html{
-    height: 100%;
+    height: 1080px;
 }
 
 input[type=range]{
-    width: 30%;
+    width: 1920px;
 }
 
 table{
-    width: 40%; 
-    margin-top: 3%;
+    width: 200px; 
+    margin-top: 10px;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
-    padding-right: 4%;
-    padding-left: 4%;
-    /*font-size: 120%;*/
-    font-size: 1vw;
+    padding-right: 13px;
+    padding-left: 13px;
+    font-size: 19px;
     font-family: MyriadPro, Cloud-Light, sans-serif;
-    margin-bottom: 20%;
+    margin-bottom: 65px;
 }
 
-td{
-    padding-bottom: -100px;
+td:nth-child(1){
+    text-align: left;
 }
-    td:nth-child(1){
-        text-align: left;
-    }
-
     td:nth-child(2){
         text-align: right;
     }
 
 .cardTitle{
     text-decoration: underline;
-    margin-bottom: 3%;
+    margin-bottom: 8px;
     display: block;
-    text-align: left;
 }
 
 .column{
-    display: inline;
-    width: 31%;
+    width: 400px;
 }
     #leftColumn{
         float: left;
-        width: 33%;
+        margin-right: 23.5px;
     }
 
     #middleColumn{
-        /*position: absolute;
-        left: 0;
-        right: 0;
-        margin-left: auto;
-        margin-right: auto;*/
         float: left;
-        margin-left: 1.3%;
-        width: 33%;
+        margin-right: 23.5px;
     }
 
     #rightColumn{
-        float: right;
+        float: left;
     }
 
 .contentCard{
     display: inline;
-    padding: 1%;
-    padding-bottom: 0.5%;
-    padding: 2% 2% 0% 2%;
-    margin-bottom: 3%;
+    padding: 10px;
+    padding: 10px 10px 3px 10px;
+    margin-bottom: 10px;
     float: left;
     font-family: MyriadPro;
-    font-size: 100%;
+    font-size: 16px;
     text-align: left;
+    width: 380px;
 }
     .red{
         background-color: #ED4337;
@@ -159,19 +144,18 @@ td{
     }
 
 .contentCard > #formsWrapper > input{
-    width: 97.7%;
-    margin-left: .2%;
-    margin-bottom: 2%;
-    font-size: 150%;
+    width: 369px;
+    margin-left: 0px;
+    margin-bottom: 8px;
+    font-size: 22px;
 }
     .contentCard > #formsWrapper > button{
-        width: 99.2%;
-        margin-left: 0.3%;
-        margin-bottom: 2%;
+        width: 379px;
+        margin-bottom: 8px;
     }
 
     .contentCard > #formsWrapper{
-        margin-top: 0%;
+        margin-top: -7px;
     }
 
 .contentTag{
@@ -179,9 +163,9 @@ td{
     width: initial;
     color: black;
     filter: brightness(150%);
-    padding: 2%;
-    margin-right: 2%;
-    margin-bottom: 2%;
+    padding: 8px;
+    margin-right: 8px;
+    margin-bottom: 8px;
 
     transition: 0.5s;
 }
@@ -209,14 +193,14 @@ td{
 
 .form{
     display: inline;
-    width: 22%;
-    font-size: 160%;
+    width: 284px;
+    font-size: 25px;
     background-color: white;
     border: 2px solid white;
     border-radius: 0px;
-    padding: .2% 0% .2% .5%;
+    padding: 2px 0px 2px 6px;
     outline: none;
-    margin-top: .4%;
+    margin-top: 6px;
     color: rgba(0, 0, 0, .3);
 
     transition: 0.5s linear;
@@ -229,67 +213,67 @@ td{
     }
 
     ::-webkit-input-placeholder {
-         color: rgba(0, 0, 0, .3);
+        color: rgba(0, 0, 0, .3);
     }
     :-moz-placeholder {
         color: rgba(0, 0, 0, .3);
-       opacity: 1;
+        opacity: 1;
     }
     ::-moz-placeholder {
         color: rgba(0, 0, 0, .3);
-       opacity: 1;
+        opacity: 1;
     }
     :-ms-input-placeholder {
         color: rgba(0, 0, 0, .3);
     }
 
-.formText{
-    display: inline-block;
-    width: 15%;
-    font-family: MyriadPro;
-    font-size: 100%;
-    visibility: hidden;
-}
-
 .icon{
     display: inline-block;
-    width: 12%;
-    margin-top: 2%;
-    /*margin-right: 10%;*/
+    width: 33px;
 }
 
 .job{
-    margin-left: .2%;
+    margin-left: 3px;
+}
+
+.main{
+    display: inline;
+    width: 1248px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 .menuItem{
-    padding: 10px 10px 10px 10px;
+    padding: 15px 10px 10px 10px;
     transition: 0.5s;
-    width: 93%;
+    width: 268px;
 }
     .menuItem:hover{
         background-color: #1d3454;
         cursor: pointer;
-        width: 93%;
 
         transition: 0.5s;
     }
 
 .salary{
-    width: 15%;
+    width: 200px;
     text-align: left;
 }
 
 .searchForm{
-    display: inline;
-    width: 79%;
-    font-size: 100%;
+    display: inline-block;
+    width: 212px;
+    font-size: 21.2px;
     background-color: rgba(255, 255, 255, .5);
     border: 2px solid rgba(255, 255, 255, .05);
-    padding: .8% 2% .8% 2%;
+    padding: 3px 5px 3px 5px;
     vertical-align: middle;
-    margin-top: -7.5%;
-    margin-left: 3%;
+    margin-top: -20px;
+    margin-left: 8px;
     border-radius: 20px;
     outline: none;
     color: rgba(0, 0, 0, .3);
@@ -309,20 +293,16 @@ td{
     }
 
 .skill{
-    margin-left: .5%;
+    margin-left: 6px;
 }
 
 .title{
     display: block;
     text-align: center;
-    font-size: 9vw;
-    margin-top: 6%;
+    font-size: 175px;
+    margin-top: 75px;
     color: black;
     font-family: Code-Light;
-}
-
-#associatedTags{
-    width: 96%;
 }
 
 #averageSalary{
@@ -331,28 +311,17 @@ td{
 
 #exploreTitle{
     display: inline;
-    margin-left: 1%;
+    margin-left: -60px;
     font-family: Code-Bold;
 }
 
 #formsWrapper{
-    margin-top: 10%;
-}
-
-#homeContent{
-    width: 67%;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+    margin-top: 125px;
 }
 
 #homeLink{
-    font-size: 100%;
-    padding: .8% 2% .8% 2%;
-    margin-left: 3%;
+    font-size: 21.2px;
+    padding: 10px 10px 10px 10px;
     color: white;
 
     transition: 0.5s;
@@ -364,20 +333,14 @@ td{
     }
 
 #indexTitle{
-    margin-top: -3%;
+    margin-top: -37px;
     font-family: Code-Light, 'Modern No. 20';
-    font-size: 4vw;
-}
-
-#insertNewEntry{
-    margin-left: 1%;
+    font-size: 76.7px;
 }
 
 #jobStatsTable{
     color: white;
-    margin-left: 0%;
-    width: 100%;
-    /*display: inline-table;*/
+    width: 290px;
 }
 
 #jobTitle{
@@ -385,52 +348,46 @@ td{
     font-family: Code-Light;
 }
 
-#main{
-    width: 65%;
-}
-
 #menuWrapper{
-    height: 98.5%;
+    height: 965px;
     position: fixed;
     background-color: #365176;
-    width: 15%;
-    top: .8%;
+    width: 288px;
+    top: 7px;
+    left: 7px;
     color: white;
     font-family: MyriadPro;
-    font-size: 1.1vw;
+    font-size: 21.2px;
     /*border: 2px solid #1d3454;*/
 }
 
 #skillStatsTable{
     color: white;
-    width: 100%;
-    /*display: inline-table;*/
+    width: 290px;
 }
 
 #tableWrapper{
-    top: .8%;
-    margin-left: 84.1%;
-    height: 98.5%;
+    height: 965px;
     position: fixed;
-    display: block;
-    width: 15%;
     background-color: #b96649;
-    border-radius: 0px;
+    width: 288px;
+    top: 7px;
+    right: 7px;
+    display: block;
     text-align: center;
     /*border: 2px solid rgb(125, 25, 25);*/
 }
 
 #updateDatabase{
     display: inline-block;
-    margin-top: .5%;
+    margin-top: 6px;
     background-color: rgb(42, 177, 74);
     border: 2px solid rgba(28, 184, 65, .1);
-    outline: none;
     border-radius: 0px;
     color: white;
-    width: 46.5%;
-    font-size: 150%;
-    padding: .4% 0% .4% 0%;
+    width: 598px;
+    font-size: 21.2px;
+    padding: 5px 0px 5px 0px;
     font-family: MyriadPro;
     position: relative;
 
@@ -440,14 +397,14 @@ td{
     #updateDatabase:enabled:hover{
         background-color: rgb(0, 195, 46);
         cursor: pointer;
-        padding-right: .5%;
+        /*padding-right: .5%;*/
 
         transition: 0.5s linear;        
     }
 
     #updateDatabase:enabled:hover::after{
         /*content: " ➤";*/        
-        content: "  →";
+        /*content: "  →";*/
     }
 
     #updateDatabase:disabled{
