increased margins on salary content card

--- a/CoursesWebsite/css/Index.css
+++ b/CoursesWebsite/css/Index.css
@@ -126,6 +126,6 @@
     text-align: center;
 }
 
-#minimum-salary, #maximum-salary{
-    
+#minimum-salary, #maximum-salary, #matching-salaries{
+    margin-bottom: 10px;
 }
